# NES-emulator

./: .gitignore  README.md  makefile
Emulator/: CMakeLists.txt  main.cpp
Emulator/Hardware/: cartridge.cpp  cartridge.hpp  console.cpp  console.hpp  cpu.cpp  cpu.hpp  instructions.cpp  instructions.hpp  memory.cpp  memory.hpp  ppu.cpp  ppu.hpp  window.cpp  window.hpp
Emulator/Instructions/: adc.cpp  allInstructions.cpp  and.cpp  asl.cpp  bcc.cpp  bcs.cpp  beq.cpp  bit.cpp  bmi.cpp  bne.cpp  bpl.cpp  bvc.cpp  bvs.cpp  clc.cpp  cld.cpp  cli.cpp  clv.cpp  cmp.cpp  cpx.cpp  cpy.cpp  dec.cpp  dex.cpp  dey.cpp  eor.cpp  inc.cpp  inx.cpp  iny.cpp  jmp.cpp  jsr.cpp  lda.cpp  ldx.cpp  ldy.cpp  lsr.cpp  nop.cpp  ora.cpp  pha.cpp  php.cpp  pla.cpp  plp.cpp  rol.cpp  (+16 more)
ext/cc65/lib/: apple2.lib  apple2enh.lib  atari.lib  atari2600.lib  atari5200.lib  atarixl.lib  atmos.lib  c128.lib  c16.lib  c64.lib  cbm510.lib  cbm610.lib  creativision.lib  gamate.lib  geos-apple.lib  geos-cbm.lib  lynx.lib  nes.lib  (+10 more)
res/: adc.r  and.r  asl.r  bcc.r  bcs.r  beq.r  bit.r  bmi.r  bne.r  bpl.r  bvc.r  bvs.r  clv.r  cmp.r  cpx.r  cpy.r  dec.r  dex.r  dey.r  eor.r  inc.r  inx.r  iny.r  jmp.r  jsr.r  lda.r  ldx.r  ldy.r  lsr.r  ora.r  pha_pla.r  php_plp.r  rol.r  ror.r  sbc.r  sei.r  sta.r  stx.r  sty.r  tax.r  (+5 more)
tst/: adc.s  and.s  asl.s  bcc.s  bcs.s  beq.s  bit.s  bmi.s  bne.s  bpl.s  bvc.s  bvs.s  clc.s  cld.s  cli.s  clv.s  cmp.s  cpx.s  cpy.s  dec.s  dex.s  dey.s  eor.s  inc.s  inx.s  iny.s  jmp.s  jsr.s  lda.s  ldx.s  ldy.s  lsr.s  nop.s  ora.s  pha_pla.s  php_plp.s  rol.s  ror.s  sbc.s  sec.s  (+11 more)
